# learn-cuda

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml
conv2d/: Makefile  conv.h  main.cc
hello/: hello.cu
matmul/: Makefile  matmul.h
notes/pmpp3/: ch1-introduction.md  ch2-data-parallel-computing.md  learning-path.md
scripts/: docker.sh  download.sh
src/common/: bench.cuh  buffer.cuh  error.cuh  event.cuh  utils.cuh
src/conv2d/: conv.cu
src/examples/: Makefile
src/examples/blur/: CMakeLists.txt  blur.cu
src/examples/conv2d/: conv.cc  conv.cu  conv.h  main.cc
src/examples/grayscale/: CMakeLists.txt  grayscale.cu
src/examples/hello/: hello.cu
src/examples/invert_color/: CMakeLists.txt  invert.cu
src/examples/matmul/: matmul.c  matmul.cu  matmul.h
src/examples/random/: random.cu
src/examples/vecadd/: vecAdd.cu
src/gemm/: bench.cuh  main.cu
src/gemm/kernels/: gemm_coalescing.cuh  gemm_cpu.hpp  gemm_naive.cuh  gemm_shared_mem.cuh  gemmsb_cpu.hpp  sgemm_cublas.cuh  sgemmsb_cublas.cuh
src/hello/: Makefile
src/matmul/: matmul.c  matmul.cu
src/random/: Makefile  random.cu
src/vecadd/: Makefile  vecAdd.cu
utils/: plot.py
